{
  "version": 4,
  "terraform_version": "1.5.0",
  "serial": 40,
  "lineage": "eac9f602-a2b9-de43-ec0d-3d3122770ce3",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b175c9806459b25c",
            "association_id": "eipassoc-0a124607ae93da31c",
            "domain": "vpc",
            "id": "eipalloc-0b175c9806459b25c",
            "network_border_group": "eu-central-1",
            "network_interface": "eni-0b44a00b14e3c29e9",
            "private_dns": "ip-192-168-19-183.eu-central-1.compute.internal",
            "private_ip": "192.168.19.183",
            "public_dns": "ec2-3-77-252-13.eu-central-1.compute.amazonaws.com",
            "public_ip": "3.77.252.13",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-079e5ed1361a4db37",
            "association_id": "eipassoc-016799fc87d7d3deb",
            "domain": "vpc",
            "id": "eipalloc-079e5ed1361a4db37",
            "network_border_group": "eu-central-1",
            "network_interface": "eni-07d65e85e92e3ec1e",
            "private_dns": "ip-192-168-103-223.eu-central-1.compute.internal",
            "private_ip": "192.168.103.223",
            "public_dns": "ec2-52-29-113-229.eu-central-1.compute.amazonaws.com",
            "public_ip": "52.29.113.229",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:313115713694:internet-gateway/igw-048754e4c901a41be",
            "id": "igw-048754e4c901a41be",
            "owner_id": "313115713694",
            "tags": {
              "Name": "main"
            },
            "tags_all": {
              "Name": "main"
            },
            "vpc_id": "vpc-089ebd456a10d4c2f"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "gw1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b175c9806459b25c",
            "association_id": "eipassoc-0a124607ae93da31c",
            "connectivity_type": "public",
            "id": "nat-023599a9857e5d429",
            "network_interface_id": "eni-0b44a00b14e3c29e9",
            "private_ip": "192.168.19.183",
            "public_ip": "3.77.252.13",
            "subnet_id": "subnet-005a14989d69bae5c",
            "tags": {
              "Name": "NAT 1"
            },
            "tags_all": {
              "Name": "NAT 1"
            }
          },
          "dependencies": [
            "aws_eip.nat1",
            "aws_internet_gateway.main",
            "aws_subnet.public1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "gw2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-079e5ed1361a4db37",
            "association_id": "eipassoc-016799fc87d7d3deb",
            "connectivity_type": "public",
            "id": "nat-010568e168c4b764e",
            "network_interface_id": "eni-07d65e85e92e3ec1e",
            "private_ip": "192.168.103.223",
            "public_ip": "52.29.113.229",
            "subnet_id": "subnet-04e9dfb6339320557",
            "tags": {
              "Name": "NAT 2"
            },
            "tags_all": {
              "Name": "NAT 2"
            }
          },
          "dependencies": [
            "aws_eip.nat2",
            "aws_internet_gateway.main",
            "aws_subnet.public2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:313115713694:route-table/rtb-069aeaa12b7fdfebf",
            "id": "rtb-069aeaa12b7fdfebf",
            "owner_id": "313115713694",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-023599a9857e5d429",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private1"
            },
            "tags_all": {
              "Name": "private1"
            },
            "timeouts": null,
            "vpc_id": "vpc-089ebd456a10d4c2f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_nat_gateway.gw1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:313115713694:route-table/rtb-0cea92986fcb0ce87",
            "id": "rtb-0cea92986fcb0ce87",
            "owner_id": "313115713694",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-010568e168c4b764e",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private2"
            },
            "tags_all": {
              "Name": "private2"
            },
            "timeouts": null,
            "vpc_id": "vpc-089ebd456a10d4c2f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_nat_gateway.gw2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:313115713694:route-table/rtb-016e80ada325e6855",
            "id": "rtb-016e80ada325e6855",
            "owner_id": "313115713694",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-048754e4c901a41be",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public"
            },
            "tags_all": {
              "Name": "public"
            },
            "timeouts": null,
            "vpc_id": "vpc-089ebd456a10d4c2f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-094fbab9814dc32ac",
            "route_table_id": "rtb-069aeaa12b7fdfebf",
            "subnet_id": "subnet-042abd1d693aa5d6b"
          },
          "dependencies": [
            "aws_nat_gateway.gw1",
            "aws_route_table.private1",
            "aws_subnet.private1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-092035017c196f588",
            "route_table_id": "rtb-0cea92986fcb0ce87",
            "subnet_id": "subnet-064a76c6f7655528b"
          },
          "dependencies": [
            "aws_nat_gateway.gw2",
            "aws_route_table.private2",
            "aws_subnet.private2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05cd2ef18f77a84a9",
            "route_table_id": "rtb-016e80ada325e6855",
            "subnet_id": "subnet-005a14989d69bae5c"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a6f20fdf3e9bafe2",
            "route_table_id": "rtb-016e80ada325e6855",
            "subnet_id": "subnet-04e9dfb6339320557"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:313115713694:subnet/subnet-042abd1d693aa5d6b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "192.168.128.0/18",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-042abd1d693aa5d6b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "313115713694",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-eu-central-1a",
              "kubernetes.io/cluster/eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "private-eu-central-1a",
              "kubernetes.io/cluster/eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-089ebd456a10d4c2f"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:313115713694:subnet/subnet-064a76c6f7655528b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "192.168.192.0/18",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-064a76c6f7655528b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "313115713694",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-eu-central-1b",
              "kubernetes.io/cluster/eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "private-eu-central-1b",
              "kubernetes.io/cluster/eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-089ebd456a10d4c2f"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:313115713694:subnet/subnet-005a14989d69bae5c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "192.168.0.0/18",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-005a14989d69bae5c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "313115713694",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-eu-central-1a",
              "kubernetes.io/cluster/eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "public-eu-central-1a",
              "kubernetes.io/cluster/eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-089ebd456a10d4c2f"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:313115713694:subnet/subnet-04e9dfb6339320557",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "192.168.64.0/18",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04e9dfb6339320557",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "313115713694",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-eu-central-1b",
              "kubernetes.io/cluster/eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "public-eu-central-1b",
              "kubernetes.io/cluster/eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-089ebd456a10d4c2f"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:313115713694:vpc/vpc-089ebd456a10d4c2f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-09cc3abfbc32cac5f",
            "default_route_table_id": "rtb-0abedde6ba595b804",
            "default_security_group_id": "sg-0b5638dc29b61af0d",
            "dhcp_options_id": "dopt-09b22cdc5db9c1919",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-089ebd456a10d4c2f",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0abedde6ba595b804",
            "owner_id": "313115713694",
            "tags": {
              "Name": "main"
            },
            "tags_all": {
              "Name": "main"
            }
          }
        }
      ]
    }
  ]
}